gcc/testsuite/rust/rustc/ui/attributes/used-issue-126789.rs
extern "C" {
    #[used] // { dg-error "" "" { target *-*-* } }
    static FOO: i32;
}

fn main() {}

